--- a/index.html
+++ b/index.html
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Integrando_html_js</title>
-    <link rel="stylesheet" href="main.css" />
+    <title>Calculadora de médias</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Open+Sans&family=Roboto+Slab&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1> Integrando o HTML com o JavaScript</h1>
-            <h2> Formulário de comparação entre dois números</h2>
-        </div>
-    </header>
-    <section class="corpo">
-        <form class="formulario" id="form-numeros">
-            <h3>Número 1</h3>
-            <input type="number" id="numero1" required placeholder="Insira o primeiro número" />
-            <h3>Número 2</h3>
-            <input type="number" id="numero2" required placeholder="Insira o segundo número" />
-            <button class="botao-testar" type="submit" onclick="compararNumeros()">Comparar</button>
+    <div class="container">
+        <header>
+            <img src="./images/logo.png" alt="capelo e diploma">
+            <h1>Calculadora de Médias</h1>
+        </header>
+        <form action="">
+            <input type="text" required placeholder="Nome da Atividade">
+            <input type="number" required placeholder="Nota da atividade" min="0" max="10">
+            <button type="submit">Adicionar +</button>
         </form>
-    <div class="resposta">
-        <p class="Numero1Maior"></p>
-        <p class="Numero2Maior"></p>
-        <p class="NumeroIguais"></p>
+        <table cellspacing="0">
+            <thead>
+                <tr>
+                    <th>
+                        Nome da atividade
+                    </th>
+                    <th>
+                        Nota da atividade
+                    </th>
+                    <th>
+                        Aprovado?
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Atividade 1</td>
+                    <td>7</td>
+                    <td><img src="./images/aprovado.png" alt="Figura Festa"></td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>Média final</td>
+                    <td>7</td>
+                    <td><span class="resultado aprovado">Aprovado</span></td>
+                </tr>
+            </tfoot>
+        </table>
     </div>
-    </section> 
-    <script src="./main.js"></script>                                                                                                                                                                                                                                                   
 </body>
 </html>
