--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <img src="./images/logo.png" alt="capelo e diploma">
             <h1>Calculadora de Médias</h1>
         </header>
-        <form action="">
-            <input type="text" required placeholder="Nome da Atividade">
-            <input type="number" required placeholder="Nota da atividade" min="0" max="10">
+        <form id="form-atividade">
+            <input type="text" id="Nome-Atividade" placeholder="Nome da Atividade">
+            <input type="number" id="Nota-Atividade" placeholder="Nota da atividade" min="0" max="10">
             <button type="submit">Adicionar +</button>
         </form>
         <table cellspacing="0">
@@ -35,20 +35,16 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Atividade 1</td>
-                    <td>7</td>
-                    <td><img src="./images/aprovado.png" alt="Figura Festa"></td>
-                </tr>
             </tbody>
             <tfoot>
                 <tr>
                     <td>Média final</td>
-                    <td>7</td>
-                    <td><span class="resultado aprovado">Aprovado</span></td>
+                    <td id="media-final-valor">---</td>
+                    <td id="media-final-resultado">---</td>
                 </tr>
             </tfoot>
         </table>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
