registros OK, falta o css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         </header>
         <form id="form-dados">
             <input type="text" id="nomeContato" placeholder="Nome do Contato">
+            <p class="error-message">
+                O nome tem que ser completo
+            </p>
+            <p class="success-message">
+                Nome completo
+            </p>
             <input type="number" id="codigoCidade" placeholder="DDD" style="width: 50px;">
             <input type="number" id="numeroTelefone" placeholder="Número do Telefone" min="0">
             <button type="submit">Adicionar +</button>
