--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 </head>
 
 <body>
-  <h1 class="titulo">Lista de Tarefas</h1>
-  <input class="caixa" type="text" placeholder="Nome da tarefa">
+  <div class="container">
+    <h1>Lista de Tarefas</h1>
+      <div class="input-container">
+        <input type="text" placeholder="Nome da tarefa">
+        <button type="submit">Cadastrar</button>
+      </div>
+    </div>  
 </body>
 
 </html>
