--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
   <div class="container">
     <h1>Lista de Tarefas</h1>
       <div class="input-container">
-        <input type="text" placeholder="Nome da tarefa">
-        <button type="submit">Cadastrar</button>
+        <input id="input-tarefa" type="text" placeholder="Nome da tarefa">
+        <button id="botao-cadastrar" type="submit">Cadastrar</button>
       </div>
-    </div>  
-</body>
-
+    </div> 
+    <tfoot>
+      <ul id="lista-tarefas">
+      </ul>
+    </tfoot>
+    <script src="./main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  </body>
 </html>
