--- a/index.html
+++ b/index.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>jQuery</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulário Plug-in jQuery Cap 10</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./main.css">
 </head>
-
 <body>
-  <div class="container">
-    <h1>Lista de Tarefas</h1>
-      <div class="input-container">
-        <input id="input-tarefa" type="text" placeholder="Nome da tarefa">
-        <button id="botao-cadastrar" type="submit">Cadastrar</button>
-      </div>
-    </div> 
-    <tfoot>
-      <ul id="lista-tarefas">
-      </ul>
-    </tfoot>
-    <script src="./main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  </body>
+    <header>
+        <div class="container">
+            <h1>ADOTE UM PET E SEJA FELIZ</h1>
+        </div>
+    </header>
+
+    <section id="cadastro">`
+        <div class="container">
+            <h2>Dados do cliente</h2>
+        <form>
+            <div class="form-campo">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome">
+            </div>
+            <div class="form-campo">
+                <label for="e-mail">E-mail</label>
+                <input type="text" id="email" name="email">
+            </div>
+            <div class="form-campo">
+                <label for="telefone">Telefone</label>
+                <input type="number" id="telefone" name="telefone">
+            </div>
+            <div class="form-completo">
+                <label for="cpf">CPF</label>
+                <input type="number" id="cpf" name="cpf">
+            </div>
+            <div class="form-completo">
+                <label for="endreco">Endereço</label>
+                <input type="text" id="endereco" name="endereco">
+            </div>
+            <div class="cep">
+                <label for="cep">cep</label>
+                <input type="number" name="cep" id="cep">
+            </div>
+        </form>    
+        </div>
+    </section>
+</body>
 </html>
