--- a/index.html
+++ b/index.html
@@ -11,12 +11,32 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container container-flex">
             <h1>ADOTE UM PET E SEJA FELIZ</h1>
+        <div class="menu-hamburguer">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <nav>
+            <div class="contaienr">
+                <ul>
+                    <li>
+                        <a href="#">Adotados do mês</a>
+                    </li>
+                    <li>
+                        <a href="#">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="#">Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         </div>
     </header>
 
-    <section id="cadastro">`
+    <section id="cadastro">
         <div class="container">
             <h2>Dados do cliente</h2>
         <form>
@@ -47,5 +67,14 @@
         </form>    
         </div>
     </section>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./jquery.mask.min.js"></script>
+    <script src="./jquery.validate.min.js"></script>
+    <script src=".//messages_pt_BR.min.js"></script>
+    <script src=".//main.js"></script>
+
 </body>
 </html>
