--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário Plug-in jQuery Cap 10</title>
+    <title>Adoções AM</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
@@ -13,13 +13,14 @@
     <header>
         <div class="container container-flex">
             <h1>ADOTE UM PET E SEJA FELIZ</h1>
-        <div class="menu-hamburguer">
+            <div class="hamburguer">
             <span></span>
             <span></span>
             <span></span>
+            </div>
         </div>
         <nav>
-            <div class="contaienr">
+            <div class="container">
                 <ul>
                     <li>
                         <a href="#">Adotados do mês</a>
@@ -33,8 +34,16 @@
                 </ul>
             </div>
         </nav>
-        </div>
     </header>
+
+    <div class="quadro-carrousel">
+    <div id="carroussel">
+        <img src="./images/dog1.jpg" alt="Doguinho">
+        <img src="./images/gato1.jpg" alt="Bechano">
+        <img src="./images/dog2.jpg" alt="Doguinho">
+        <img src="./images/gato2.jpg" alt="Bechano">
+    </div>
+    </div>
 
     <section id="cadastro">
         <div class="container">
@@ -45,7 +54,7 @@
                 <input type="text" id="nome" name="nome">
             </div>
             <div class="form-campo">
-                <label for="e-mail">E-mail</label>
+                <label for="email">E-mail</label>
                 <input type="text" id="email" name="email">
             </div>
             <div class="form-campo">
@@ -71,10 +80,10 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="./jquery.mask.min.js"></script>
-    <script src="./jquery.validate.min.js"></script>
-    <script src=".//messages_pt_BR.min.js"></script>
-    <script src=".//main.js"></script>
+    <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 </html>
