--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <header>
         <div class="container container-flex">
             <h1>ADOTE UM PET E SEJA FELIZ</h1>
-            <div class="hamburguer">
-            <span></span>
-            <span></span>
-            <span></span>
+            <div>
+                <div class="hamburguer">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
-        </div>
+        </div>    
         <nav>
             <div class="container">
                 <ul>
@@ -36,14 +38,102 @@
         </nav>
     </header>
 
-    <div class="quadro-carrousel">
-    <div id="carroussel">
-        <img src="./images/dog1.jpg" alt="Doguinho">
-        <img src="./images/gato1.jpg" alt="Bechano">
-        <img src="./images/dog2.jpg" alt="Doguinho">
-        <img src="./images/gato2.jpg" alt="Bechano">
+    <div id="caroussel">
+        <img src="./images/dog1.jpg" alt="Doguinho" class="imagem-caroussel">
+        <img src="./images/gato1.jpg" alt="Bechano" class="imagem-caroussel">
+        <img src="./images/dog2.jpg" alt="Doguinho" class="imagem-caroussel">
+        <img src="./images/gato2.jpg" alt="Bechano" class="imagem-caroussel">
+        <img src="./images/gato3.jpg" alt="Bechano" class="imagem-caroussel">
+        <img src="./images/dog3.jpg" alt="Doguinho" class="imagem-caroussel">
+        <img src="./images/gato4.jpg" alt="Bechano" class="imagem-caroussel">
     </div>
-    </div>
+    
+    <section id="sobre-abrigo">
+        <div class="container container-flex">
+            <img src="./images/casa.jpg" alt="Imagem casa do abrigo">
+        <div>
+            <h2>
+                Sobre o abrigo
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odio aliquam eligendi ratione explicabo a quae animi vitae, at ullam repellendus quasi harum, libero ad dolore inventore suscipit doloremque officia.
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus ducimus, rem nobis ea repellendus a expedita sunt nisi fugit eos incidunt adipisci numquam, similique suscipit voluptas architecto accusantium consequatur aspernatur.
+            </p>
+        </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>
+                DESTAQUES DO MÊS
+            </h2>
+            <ul class="container-flex lista-adocao">
+                <li>
+                    <img src="./images/ad1.jpg" alt="adocao1">
+                    <h3>
+                        Mustafá
+                    </h3>
+                    <p>
+                        Sem raça definida
+                    </p>
+                    <button type="button">Quero adotar</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/ad2.jpg" alt="adocao2">
+                    <h3>
+                        Ferrugem
+                    </h3>
+                    <p>
+                        Sem raça definida
+                    </p>
+                    <button type="button">Quero adotar</button>
+                </li>
+                <li>
+                    <img src="./images/ad3.jpg" alt="adocao3">
+                    <h3>
+                        Negão
+                    </h3>
+                    <p>
+                        Sem raça definida
+                    </p>
+                    <button type="button">Quero adotar</button>
+                </li>
+                <li>
+                    <img src="./images/ad4.jpg" alt="adocao4">
+                    <h3>
+                        Mingau
+                    </h3>
+                    <p>
+                        Sem raça definida
+                    </p>
+                    <button type="button">Quero adotar</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/ad5.jpg" alt="adocao5">
+                    <h3>
+                        Frajola
+                    </h3>
+                    <p>
+                        Sem raça definida
+                    </p>
+                    <button type="button">Quero adotar</button>
+                </li>
+                <li>
+                    <img src="./images/ad6.jpg" alt="adocao6">
+                    <h3>
+                        Verdinha
+                    </h3>
+                    <p>
+                        Sem raça definida
+                    </p>
+                    <button type="button">Quero adotar</button>
+                </li>
+            </ul>
+        </div>
+    </section>
 
     <section id="cadastro">
         <div class="container">
