--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container container-flex">
-            <h1>ADOTE UM PET E SEJA FELIZ</h1>
+            <h1>ABRIGO DONA WAL</h1>
             <div>
                 <div class="hamburguer">
                     <span></span>
@@ -140,10 +140,10 @@
 
     <section id="cadastro">
         <div class="container">
-            <h2>Dados do cliente</h2>
+            <h2>Dados do adotante</h2>
         <form>
             <div class="form-campo">
-                <label for="nome">Nome:</label>
+                <label for="nome">Nome</label>
                 <input type="text" id="nome" name="nome">
             </div>
             <div class="form-campo">
@@ -152,23 +152,48 @@
             </div>
             <div class="form-campo">
                 <label for="telefone">Telefone</label>
-                <input type="number" id="telefone" name="telefone">
+                <input type="tel" id="telefone" name="telefone">
             </div>
-            <div class="form-completo">
+            <div class="form-campo">
                 <label for="cpf">CPF</label>
-                <input type="number" id="cpf" name="cpf">
+                <input type="text" id="cpf" name="cpf">
             </div>
-            <div class="form-completo">
+            <div class="form-campo">
                 <label for="endreco">Endereço</label>
                 <input type="text" id="endereco" name="endereco">
             </div>
-            <div class="cep">
-                <label for="cep">cep</label>
-                <input type="number" name="cep" id="cep">
+            <div class="form-campo">
+                <label for="cep">CEP</label>
+                <input type="text" name="cep" id="cep">
             </div>
+            <div class="form-campo">
+                <label for="pet">Pet de interesse</label>
+                <input type="text" name="pet" id="pet">
+            </div>
+            <button type="submit">Enviar</button>
         </form>    
         </div>
     </section>
+
+    <footer>
+        <div class="container container-class">
+            <p>Siga nossas redes sociais</p>
+            <ul>
+                <li>
+                    <a href="#"></a>
+                        <img src="./images/facebook.png" alt="Facebook">
+                </li>
+                <li>
+                    <a href="#"></a>
+                        <img src="./images/instagram.png" alt="Instagram">
+                </li>
+                <li>
+                    <a href="#"></a>
+                        <img src="./images/youtube.png" alt="Youtube">
+                </li>
+            </ul>
+        </div>
+    </footer>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
