--- a/Responsivo/index.html
+++ b/Responsivo/index.html
@@ -50,7 +50,7 @@
                     </ul>
                 </li>
             </ul>
-            <div class="clear-left"></div>
+            <div class="clear"></div>
         </nav>
     </header>
 </body>
