--- a/bootstrap2/navbar.html
+++ b/bootstrap2/navbar.html
@@ -33,7 +33,7 @@
         <div class="navbar navbar-expand-lg">
             <div class="container">
                 <h1>Títilo do site</h1>
-                <button type="button" class="navbar-toggles" data-bs-toggle="collapse" data-bs-target="#menu">
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <nav class="collapse navbar-collapse justify-content-end" id="menu">
@@ -52,7 +52,7 @@
                         </li>
                     </ul>    
                 </nav>
-                <button id="btn-checar-email" class="btn btn-warning" type="button">Chegar caixa de entrada</button>
+                <button id="btn-checar-emails" class="btn btn-warning" type="button">Chegar caixa de entrada</button>
             </div>
         </div>
     </header>
@@ -64,18 +64,18 @@
             <h2>Produtos</h2>
             <div class="container">
                 <nav class="nav nav-pills">
-                    <button data-bs-toggle="tab" data-bs-target="aba1" class="nav-link active active" type="button">Eletrônicos</button>
-                    <button data-bs-toggle="tab" data-bs-target="aba2" class="nav-link active" type="button">Eletrônicos</button>
-                    <button data-bs-toggle="tab" data-bs-target="aba3" class="nav-link active" type="button">Eletrônicos</button>
+                    <button data-bs-toggle="tab" data-bs-target="aba1" class="nav-link active" type="button">Eletrônicos</button>
+                    <button data-bs-toggle="tab" data-bs-target="aba2" class="nav-link" type="button">Moda Masculina</button>
+                    <button data-bs-toggle="tab" data-bs-target="aba3" class="nav-link" type="button">Moda Feminina</button>
                 </nav>
                 <div class="tab-content">
                     <div class="tab-pane active" id="aba1">
                         Conteúdo da aba Eletrônicos
                     </div>
-                    <div class="tab-pane active" id="aba2">
+                    <div class="tab-pane" id="aba2">
                         Conteúdo da aba Moda Masculina
                     </div>
-                    <div class="tab-pane active" id="aba3">
+                    <div class="tab-pane" id="aba3">
                         Conteúdo da aba Moda Feminina
                     </div>
                 </div>
