--- a/bootstrap2/navbar.html
+++ b/bootstrap2/navbar.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./lib/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap.min.css">
     <style>
         .navbar-nav .nav-link.active {
             color: #fff;
@@ -32,8 +33,8 @@
     <header id="cabecalho">
         <div class="navbar navbar-expand-lg">
             <div class="container">
-                <h1>Títilo do site</h1>
-                <button type="button" class="navbar-toggles" data-bs-toggle="collapse" data-bs-target="#menu">
+                <h1>Título do site</h1>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <nav class="collapse navbar-collapse justify-content-end" id="menu">
@@ -42,17 +43,17 @@
                             <a class="nav-link active" href="#inicio">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#produtos">Produtos</a>
+                            <a class="nav-link" href="#produtos">Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#promocoes">Promoções</a>
+                            <a class="nav-link" href="#promocoes">Promoções</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#contato">Contato</a>
+                            <a class="nav-link" href="#contato">Contato</a>
                         </li>
-                    </ul>    
+                    </ul>
                 </nav>
-                <button id="btn-checar-email" class="btn btn-warning" type="button">Chegar caixa de entrada</button>
+                <button id="btn-checar-emails" class="btn btn-warning" type="button">Checar caixa de entrada</button>
             </div>
         </div>
     </header>
@@ -64,18 +65,18 @@
             <h2>Produtos</h2>
             <div class="container">
                 <nav class="nav nav-pills">
-                    <button data-bs-toggle="tab" data-bs-target="aba1" class="nav-link active active" type="button">Eletrônicos</button>
-                    <button data-bs-toggle="tab" data-bs-target="aba2" class="nav-link active" type="button">Eletrônicos</button>
-                    <button data-bs-toggle="tab" data-bs-target="aba3" class="nav-link active" type="button">Eletrônicos</button>
+                    <button data-bs-toggle="tab" data-bs-target="#aba1" class="nav-link active" type="button">Eletrônicos</button>
+                    <button data-bs-toggle="tab" data-bs-target="#aba2" class="nav-link" type="button">Moda Masculina</button>
+                    <button data-bs-toggle="tab" data-bs-target="#aba3" class="nav-link" type="button">Moda Feminina</button>
                 </nav>
                 <div class="tab-content">
                     <div class="tab-pane active" id="aba1">
                         Conteúdo da aba Eletrônicos
                     </div>
-                    <div class="tab-pane active" id="aba2">
+                    <div class="tab-pane" id="aba2">
                         Conteúdo da aba Moda Masculina
                     </div>
-                    <div class="tab-pane active" id="aba3">
+                    <div class="tab-pane" id="aba3">
                         Conteúdo da aba Moda Feminina
                     </div>
                 </div>
@@ -84,7 +85,7 @@
         <section id="promocoes">
             <h2>Promoções</h2>
         </section>
-        <section id="promocoes">
+        <section id="contato">
             <h2>Contato</h2>
         </section>
     </div>
@@ -104,18 +105,18 @@
             </div>
         </div>
     </div>
-
-    <script src="./lib/bootstrap.bundle.min.js"></script>
+    
+    <script src="lib/bootstrap.bundle.min.js"></script>
     <script>
         const ativadorToast = document.getElementById('btn-checar-emails');
         const mensagem = document.getElementById('mensagens-alerta')
 
         if (ativadorToast) {
             ativadorToast.addEventListener('click', function() {
-                const toast = new bootstrap.toast(mensagem);
+                const toast = new bootstrap.Toast(mensagem);
                 toast.show();
             })
-        }
+        } 
     </script>
 </body>
 </html>
