--- a/Projeto3/index.html
+++ b/Projeto3/index.html
@@ -14,7 +14,9 @@
 <body>
     <header class="navbar navbar-expand-lg sticky-lg-top p-4" id="cabecalho">
         <div class="container">
-            <h1 class="navbar-brand m-0 section-title">Nome do restaurante</h1>
+            <h1 class="navbar-brand m-0 section-title">
+                Nome do restaurante
+            </h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -386,7 +388,6 @@
             </div>
         </div>
     </section>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
