--- a/Projeto3/index.html
+++ b/Projeto3/index.html
@@ -113,7 +113,7 @@
                 <h2 class="section-title text-center">Para todas <span class="text-colored">as ocasiões</span></h2>
             </div>
             <div class="row mt-4">
-                <div class="col-md-4 m">
+                <div class="col-md-4">
                     <img src="./imagens/eventos/aniversario.jpg" alt="" class="d-block w-100 rounded mb-2">
                     <h3 class="text-colored fs-4">
                         <i class="bi bi-calendar-heart-fill"></i>
